# demo

CrossCache/: .gitignore  CMakeLists.txt  README.md
CrossCache/include/cache/: cache.h
CrossCache/include/config/: conf.h
CrossCache/include/inner_h/: device.h  inner.h  protocol.h
CrossCache/python/: adaptor.py  crosscache_connector.py  fake_client.py  ipckey_utils.cpp  setup.py
CrossCache/python/utils/: futures.py  mq.py  protocol.py
CrossCache/src/: CMakeLists.txt  main.c
CrossCache/src/cache/: CMakeLists.txt  cache.c
CrossCache/src/config/: CMakeLists.txt  config.cpp
CrossCache/src/device/: CMakeLists.txt  adaptor.h  device.cpp
CrossCache/src/device/mem/: mem.cpp
CrossCache/src/device/npu/: npu.cpp  npu.h
CrossCache/src/device/npu/kernels/: CMakeLists.txt  multi_layer_memcpy_kernel.cpp
CrossCache/src/device/npu_sdk/: npu_sdk.cpp
CrossCache/tests/: build.sh  test_copy.cpp
