#***********************************************************
#***********************************************************

include _directories(${CMAKE_CURRENT_SOURCE_DIR})

#***********************************************************
#***********************************************************

aux_source_directory(.	CACHE_SRC)

#***********************************************************
#***********************************************************

add_library(cache ${CACHE_SRC})
target_link_libraries(cache infra
							securec)